# casuno

./: LICENSE  README.md  casuno.py  examples.py  opti2unopy.py  opti_problems.py  pyproject.toml  test.py
.github/workflows/: python-package.yml
casuno/: __init__.py  opti_problems.py
examples/: examples.py
tests/: .coverage  test_presets.py
